# GraphicsLab_4

./: .gitignore  App.cpp  App.h  Axis3D.cpp  Axis3D.h  CMakeLists.txt  CMakePresets.json  ColorAnimator.cpp  ColorAnimator.h  Entity3D.h  LightCube.cpp  LightCube.h  ScalarAnimator.cpp  ScalarAnimator.h  Shader.h  Torus.cpp  Torus.h  main.cpp  matrix_utils.h  rotation.h  shader_utils.cpp  shader_utils.h  shaders.h  time_utils.h
scripts/: gen_shaders_header.py
shaders/: axis.frag  axis.vert  light_cube.frag  light_cube.vert  torus.frag  torus.vert  torus_tex.frag  torus_tex.vert
